<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="2"
        android:columnCount="1"
        android:background="@android:color/darker_gray">
        <TextView
            android:id="@+id/log_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:background="@color/cardview_shadow_start_color"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp" />
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="1"
            android:orientation="vertical"
            android:padding="16dp"
            android:rowCount="3"
            android:columnCount="3"
            android:background="@android:color/darker_gray">
            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_columnSpan="2"
                android:checked="false"
                android:switchMinWidth="56dp"
                android:text="@string/sms"
                android:textColor="#1c5f50"
                android:textOff="@string/off"
                android:textOn="@string/on" />
            <TextView
                android:id="@+id/weight_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/target_weight_number"
                android:textColor="#1c5f50"/>
            <EditText
                android:id="@+id/target_weight_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:inputType="number"
                android:hint="@string/weight_hint"
                android:importantForAutofill="no" />
            <Button
                android:id="@+id/button_target_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:text="@string/add_weight"
                android:textColor="#1c5f50"
                android:enabled="false"
                android:backgroundTint="@android:color/holo_green_dark" />
        </GridLayout>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>