<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="2"
    android:columnCount="1"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:text="@string/app_title"
        android:textSize="50sp"
        android:textColor="@android:color/background_dark"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@android:drawable/title_bar"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_row="1"
        android:orientation="vertical"
        android:padding="16dp"
        android:rowCount="4"
        android:columnCount="3"
        android:background="@android:color/darker_gray">
        <TextView
            android:id="@+id/username_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/username"
            android:textColor="#1c5f50"/>
        <TextView
            android:id="@+id/password_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/password"
            android:textColor="#1c5f50"/>
        <EditText
            android:id="@+id/username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:inputType="text"
            android:hint="@string/user_hint"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:inputType="textPassword"
            android:hint="@string/pass_hint"
            android:importantForAutofill="no" />
        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/loginOrCreate"
            android:textColor="#1c5f50"
            android:enabled="false"
            android:backgroundTint="@android:color/holo_green_dark"
            android:onClick="loginOrCreateAccount"/>
    </GridLayout>
</GridLayout>