<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.LogbookFragment" >
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="2"
        android:columnCount="1">
        <TextView
            android:id="@+id/log_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:text="@string/logbook"
            android:textSize="30sp"
            android:textColor="@android:color/background_dark"
            android:textAlignment="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:background="@color/cardview_shadow_start_color"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="1"
            android:orientation="vertical"
            android:padding="16dp"
            android:rowCount="4"
            android:columnCount="2"
            android:background="@android:color/darker_gray">
            <TableLayout
                android:id="@+id/weight_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">
                <TableRow
                    android:id="@+id/table_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_margin="10dp"
                        android:text="@string/table_date"
                        android:textSize="20sp"
                        android:textColor="#1c5f50"
                        android:textAlignment="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_margin="10dp"
                        android:text="@string/table_weight"
                        android:textSize="20sp"
                        android:textColor="#1c5f50"
                        android:textAlignment="center"/>
                </TableRow>
            </TableLayout>
        </GridLayout>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>